tests/http/return_two_status_codes.stderr
error[E0277]: the trait bound `[closure@$DIR/tests/http/return_two_status_codes.rs:6:34: 6:36]: Handler<_>` is not satisfied
 --> tests/http/return_two_status_codes.rs:6:34
  |
6 |     Router::new().route("/", get(|| (StatusCode::OK, StatusCode::OK)));
  |                              --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_>` is not implemented for closure `[closure@$DIR/tests/http/return_two_status_codes.rs:6:34: 6:36]`
  |                              |
  |                              required by a bound introduced by this call
  |
note: required by a bound in `uringy::ecosystem::http::server::routing::get`
 --> src/ecosystem/http/server/routing.rs
  |
  | pub fn get<ARGS>(handler: impl Handler<ARGS> + 'static) -> MethodRouter {
  |                                ^^^^^^^^^^^^^ required by this bound in `get`
